--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Your API Key for OpenAI
 OPENAI_API_KEY=
 # Custom base url for OpenAI API. default: https://api.openai.com
-OPENAI_API_BASE_URL=
+OPENAI_API_BASE_URL=https://gemini-openai-proxy.zuisong.workers.dev/v1/chat/completions
 # Inject analytics or other scripts before </head> of the page
 HEAD_SCRIPTS=
 # Secret string for the project. Use for generating signatures for API calls
